# ShoppingCartRUST

./: Cargo.toml  README.md
api/: .env  Cargo.toml  README.md
api/database/: commercedb.sql  insert_products.sql
api/migrations/2022-08-30-140758_users/: up.sql
api/src/: main.rs  schema.rs
api/src/handlers/: product.rs  user.rs
api/src/models/: product.rs  user.rs
api/src/ops/: product.rs  user.rs
src/: main.rs
src/components/: ConfirmationDialog.rs  NumberSpinner.rs
