[package]
name = "shopping-cart-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.144", features = ["derive"] }
